fixed alignment issues

--- a/css/index_styles.css
+++ b/css/index_styles.css
@@ -170,20 +170,22 @@ a:hover {
 
 /* Other section styles */
 .section[data-anchor="about"] {
-    text-align: center;
     max-width: 1800px;
-    margin: 0 auto; /* Center the container */
+    margin: 0 auto; /* Center the container horizontally */
+    padding-left: 50px; /* Add left padding to maintain left alignment */
 }
 
 .section[data-anchor="about"] h1 {
     font-size: 36px;
     font-weight: bold;
-    margin-bottom: 40px; /* Optional: Adjust spacing between h1 and p */
+    margin-bottom: 40px;
 }
 
 .section[data-anchor="about"] p {
     font-size: 24px;
 }
+
+
 
 /* General styles */
 
